--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 .body {
   background-image: url(./images/background.png);
+  background-size: contain;
   margin: 0;
 	padding: 0;
 	height: 100vh;
 	display: flex;
   flex-direction: column;
   gap: 50px;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 }
 
 .logo {
-  margin: 100px auto 0;
+  margin: 243px auto 100px;
 }
 
 .overflow_hide {
@@ -124,7 +125,7 @@
 
 .page {
   margin-bottom: 15px;
-  max-width: 100vw;
+  width: 100%;
 }
 
 .page:last-child {
@@ -147,6 +148,7 @@
 
 .buttons {
   display: flex;
+  overflow-x: hidden;
   flex-direction: column;
   gap: 45px;
 }
@@ -157,7 +159,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .footer span {
