--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
   position: absolute;
   top: 75px;
   /* margin: 200px auto 110px; */
-  margin-bottom: 55px;
+  margin-bottom: 0;
 }
 
 .logo_menu {
