--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@
 }
 
 .middle {
-  transition: all .5s linear;
+  transition: all .5s ease-in;
   opacity: 1;
   position: relative;
   height: 50px;
@@ -66,7 +66,7 @@
 .middle img {
   position: absolute;
   display: inline;
-  transition: all .5s linear;
+  transition: all .5s ease-in;
   /* top: 17px; */
   left: 17px;
 }
@@ -120,7 +120,7 @@
   opacity: 0;
   width: 100vw;
   min-height: 100vh;
-  transition: opacity 1.3s linear;
+  transition: opacity 1.3s ease-in;
 }
 
 .pages_show {
